--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e7d83f81",
+   "id": "4b6f3673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "03543ae7",
+   "id": "c4f4aea2",
    "metadata": {},
    "outputs": [
     {
@@ -42,8 +42,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "18e0a2a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'citipy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29156/1328133173.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Use the citipy module to determine city based on latitude and longitude.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mcitipy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcitipy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'citipy'"
+     ]
+    }
+   ],
+   "source": [
+    "# Use the citipy module to determine city based on latitude and longitude.\n",
+    "from citipy import citipy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "09791716",
+   "id": "b027c158",
    "metadata": {},
    "outputs": [],
    "source": []
