--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -192,8 +192,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "e7b03605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the requests library.\n",
+    "import requests\n",
+    "\n",
+    "# Import the API key.\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "01ff123e",
+   "id": "c2da9c3b",
    "metadata": {},
    "outputs": [],
    "source": []
