--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2259efb6",
+   "id": "2f260e04",
    "metadata": {},
    "outputs": [
     {
@@ -253,8 +253,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "f7d868ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04n\"}],\"base\":\"stations\",\"main\":{\"temp\":46.71,\"feels_like\":39.94,\"temp_min\":42.15,\"temp_max\":50.31,\"pressure\":1003,\"humidity\":67},\"visibility\":10000,\"wind\":{\"speed\":17,\"deg\":327,\"gust\":31},\"clouds\":{\"all\":90},\"dt\":1639293188,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1639310669,\"sunset\":1639343514},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request.\n",
+    "city_weather.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f915259c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 804,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04n'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 46.71,\n",
+       "  'feels_like': 39.94,\n",
+       "  'temp_min': 42.15,\n",
+       "  'temp_max': 50.31,\n",
+       "  'pressure': 1003,\n",
+       "  'humidity': 67},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 17, 'deg': 327, 'gust': 31},\n",
+       " 'clouds': {'all': 90},\n",
+       " 'dt': 1639293188,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1639310669,\n",
+       "  'sunset': 1639343514},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the JSON text of the 'Get' request.\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ae098f04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City Weather found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "if city_weather.status_code == 200:\n",
+    "    print(f\"City Weather found.\")\n",
+    "else:\n",
+    "    print(f\"City weather not found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ce7a521a",
+   "id": "ce3be84e",
    "metadata": {},
    "outputs": [],
    "source": []
