updated Weather codes

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0bbc2ff4",
+   "id": "61d9d96c",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9c99fc70",
+   "id": "199571af",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "37a9ef8e",
+   "id": "9c8759f0",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0311d8e2",
+   "id": "44073c97",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f4823f8c",
+   "id": "2c14e9b3",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "074f4aa0",
+   "id": "c3c14514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c8cb7226",
+   "id": "b7b92bdc",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "02496e4a",
+   "id": "4e048113",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "23280036",
+   "id": "5d295ffb",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7592f365",
+   "id": "41e1feef",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e1e073d0",
+   "id": "6fdb59a0",
    "metadata": {},
    "outputs": [
     {
@@ -516,17 +516,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "cc93d607",
+   "execution_count": 25,
+   "id": "b39d656a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 12, 12, 7, 13, 8)"
+       "'2021-12-12 07:13:08'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,13 +537,13 @@
     "# Get the date from the JSON file.\n",
     "date = boston_data[\"dt\"]\n",
     "# Convert the UTC date to a date format with year, month, day, hours, minutes, and seconds.\n",
-    "datetime.utcfromtimestamp(date)"
+    "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "f62be5c2",
+   "execution_count": 28,
+   "id": "d2578a8e",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d961d8",
+   "id": "723ca004",
    "metadata": {},
    "outputs": [],
    "source": []
