--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -65,8 +65,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b027c158",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the dependencies.\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import timeit\n",
+    "import random \n",
+    "import citipy\n",
+    "import requests\n",
+    "from config import weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1508cddf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the citipy module to determine city based on latitude and longitude.\n",
+    "from citipy import citipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d2ae4c0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the time library and the datetime module from the datetime library \n",
+    "import time\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "63cf7a4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beginning Data Retrieval     \n",
+      "-----------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an empty list to hold the weather data.\n",
+    "city_data = []\n",
+    "# Print the beginning of the logging.\n",
+    "print(\"Beginning Data Retrieval     \")\n",
+    "print(\"-----------------------------\")\n",
+    "\n",
+    "# Create counters.\n",
+    "record_count = 1\n",
+    "set_count = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b8d29170",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loop through all the cities in our list.\n",
+    "for i in range(len(cities)):\n",
+    "\n",
+    "    # Group cities in sets of 50 for logging purposes.\n",
+    "    if (i % 50 == 0 and i >= 50):\n",
+    "        set_count += 1\n",
+    "        record_count = 1\n",
+    "        time.sleep(60)\n",
+    "\n",
+    "    # Create endpoint URL with each city.\n",
+    "    city_url = url + \"&q=\" + cities[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67411863",
    "metadata": {},
    "outputs": [],
    "source": []
