--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "b027c158",
    "metadata": {},
    "outputs": [],
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "1508cddf",
+   "execution_count": 41,
+   "id": "80bc7b5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "d2ae4c0a",
+   "execution_count": 42,
+   "id": "bf2be6f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,8 +106,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "id": "0d0193bf",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=f8acd2abb732********************24a9941a2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Starting URL for Weather Map API Call.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
-   "id": "63cf7a4e",
+   "id": "891fb7ae",
    "metadata": {},
    "outputs": [
     {
@@ -133,13 +155,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b8d29170",
+   "execution_count": 17,
+   "id": "ae6a4a51",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loop through all the cities in our list.\n",
-    "for i in range(len(cities)):\n",
+    "# Loop through all the cities in the list.\n",
+    "for i, city in enumerate(cities):\n",
     "\n",
     "    # Group cities in sets of 50 for logging purposes.\n",
     "    if (i % 50 == 0 and i >= 50):\n",
@@ -148,13 +170,88 @@
     "        time.sleep(60)\n",
     "\n",
     "    # Create endpoint URL with each city.\n",
-    "    city_url = url + \"&q=\" + cities[i]"
+    "    city_url = url + \"&q=\" + city.replace(\" \",\"+\")\n",
+    "\n",
+    "    # Log the URL, record, and set numbers and the city.\n",
+    "    print(f\"Processing Record {record_count} of Set {set_count} | {city}\")\n",
+    "    # Add 1 to the record count.\n",
+    "    record_count += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7a5985c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City not found. Skipping...\n",
+      "-----------------------------\n",
+      "Data Retrieval Complete      \n",
+      "-----------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run an API request for each of the cities.\n",
+    "try:\n",
+    "        # Parse the JSON and retrieve data.\n",
+    "        city_weather = requests.get(city_url).json()\n",
+    "        # Parse out the needed data.\n",
+    "        city_lat = city_weather[\"coord\"][\"lat\"]\n",
+    "        city_lng = city_weather[\"coord\"][\"lon\"]\n",
+    "        city_max_temp = city_weather[\"main\"][\"temp_max\"]\n",
+    "        city_humidity = city_weather[\"main\"][\"humidity\"]\n",
+    "        city_clouds = city_weather[\"clouds\"][\"all\"]\n",
+    "        city_wind = city_weather[\"wind\"][\"speed\"]\n",
+    "        city_country = city_weather[\"sys\"][\"country\"]\n",
+    "        # Convert the date to ISO standard.\n",
+    "        city_date = datetime.utcfromtimestamp(city_weather[\"dt\"]).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "        # Append the city information into city_data list.\n",
+    "        city_data.append({\"City\": city.title(),\n",
+    "                          \"Lat\": city_lat,\n",
+    "                          \"Lng\": city_lng,\n",
+    "                          \"Max Temp\": city_max_temp,\n",
+    "                          \"Humidity\": city_humidity,\n",
+    "                          \"Cloudiness\": city_clouds,\n",
+    "                          \"Wind Speed\": city_wind,\n",
+    "                          \"Country\": city_country,\n",
+    "                          \"Date\": city_date})\n",
+    "except:\n",
+    "        print(\"City not found. Skipping...\")\n",
+    "        pass\n",
+    "\n",
+    "# Indicate that Data Loading is complete.\n",
+    "print(\"-----------------------------\")\n",
+    "print(\"Data Retrieval Complete      \")\n",
+    "print(\"-----------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "32ef94bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67411863",
+   "id": "6b80d196",
    "metadata": {},
    "outputs": [],
    "source": []
