--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "<zip at 0x23b55f24648>"
+       "<zip at 0x1d4a73359c8>"
       ]
      },
      "execution_count": 2,
@@ -45,19 +45,7 @@
    "execution_count": 3,
    "id": "18e0a2a9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'citipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_29156/1328133173.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Use the citipy module to determine city based on latitude and longitude.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mcitipy\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcitipy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'citipy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the citipy module to determine city based on latitude and longitude.\n",
     "from citipy import citipy"
@@ -65,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "b027c158",
    "metadata": {},
    "outputs": [],
@@ -83,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "80bc7b5e",
+   "execution_count": 5,
+   "id": "270fa1e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "bf2be6f8",
+   "execution_count": 6,
+   "id": "61ddffdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "0d0193bf",
+   "execution_count": 7,
+   "id": "7bffa74e",
    "metadata": {
     "scrolled": true
    },
@@ -116,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=f8acd2abb732********************24a9941a2\n"
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=f8acd2abb732da069aba02524a9941a2\n"
      ]
     }
    ],
@@ -128,8 +116,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "891fb7ae",
+   "execution_count": 8,
+   "id": "3f4e633b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=f8acd2abb732da069aba02524a9941a2&q=Boston\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "print(city_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "80eb4c91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "71fdbb3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "40383226",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
+       " 'weather': [{'id': 803,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 41.81,\n",
+       "  'feels_like': 36.79,\n",
+       "  'temp_min': 38.41,\n",
+       "  'temp_max': 43.95,\n",
+       "  'pressure': 1013,\n",
+       "  'humidity': 45},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 8.01, 'deg': 307, 'gust': 21.99},\n",
+       " 'clouds': {'all': 75},\n",
+       " 'dt': 1639316161,\n",
+       " 'sys': {'type': 2,\n",
+       "  'id': 2013408,\n",
+       "  'country': 'US',\n",
+       "  'sunrise': 1639310669,\n",
+       "  'sunset': 1639343514},\n",
+       " 'timezone': -18000,\n",
+       " 'id': 4930956,\n",
+       " 'name': 'Boston',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the text of the 'Get' request.\n",
+    "city_weather.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1dbf1cb7",
    "metadata": {},
    "outputs": [
     {
@@ -155,33 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ae6a4a51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loop through all the cities in the list.\n",
-    "for i, city in enumerate(cities):\n",
-    "\n",
-    "    # Group cities in sets of 50 for logging purposes.\n",
-    "    if (i % 50 == 0 and i >= 50):\n",
-    "        set_count += 1\n",
-    "        record_count = 1\n",
-    "        time.sleep(60)\n",
-    "\n",
-    "    # Create endpoint URL with each city.\n",
-    "    city_url = url + \"&q=\" + city.replace(\" \",\"+\")\n",
-    "\n",
-    "    # Log the URL, record, and set numbers and the city.\n",
-    "    print(f\"Processing Record {record_count} of Set {set_count} | {city}\")\n",
-    "    # Add 1 to the record count.\n",
-    "    record_count += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
-   "id": "7a5985c7",
+   "id": "f125e528",
    "metadata": {},
    "outputs": [
     {
@@ -232,26 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "32ef94bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(cities)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "6b80d196",
+   "id": "d67af6df",
    "metadata": {},
    "outputs": [],
    "source": []
