updated my Weather scripts

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -2,314 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4b6f3673",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the dependencies.\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import timeit\n",
-    "import random "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c4f4aea2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<zip at 0x1d4a73359c8>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create a set of random latitude and longitude combinations.\n",
-    "lats = np.random.uniform(low=-90.000, high=90.000, size=1500)\n",
-    "lngs = np.random.uniform(low=-180.000, high=180.000, size=1500)\n",
-    "lat_lngs = zip(lats, lngs)\n",
-    "lat_lngs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "18e0a2a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use the citipy module to determine city based on latitude and longitude.\n",
-    "from citipy import citipy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b027c158",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import the dependencies.\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import timeit\n",
-    "import random \n",
-    "import citipy\n",
-    "import requests\n",
-    "from config import weather_api_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "270fa1e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use the citipy module to determine city based on latitude and longitude.\n",
-    "from citipy import citipy"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "61ddffdc",
+   "id": "7ab097b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the time library and the datetime module from the datetime library \n",
-    "import time\n",
+    "# import the dependencies\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# import the requests library\n",
+    "import requests\n",
+    "\n",
+    "# import the API key\n",
+    "from config import weather_api_key\n",
+    "\n",
+    "# Import the datetime module from the datetime library.\n",
     "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7bffa74e",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=f8acd2abb732da069aba02524a9941a2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Starting URL for Weather Map API Call.\n",
-    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
-    "print(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "3f4e633b",
+   "id": "170a2a8a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=f8acd2abb732da069aba02524a9941a2&q=Boston\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create an endpoint URL for a city.\n",
-    "city_url = url + \"&q=\" + \"Boston\"\n",
-    "print(city_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "80eb4c91",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Make a 'Get' request for the city weather.\n",
-    "city_weather = requests.get(city_url)\n",
-    "city_weather"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "71fdbb3d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create an endpoint URL for a city.\n",
-    "city_url = url + \"&q=\" + \"Boston\"\n",
-    "city_weather = requests.get(city_url)\n",
-    "city_weather"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "40383226",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 803,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'broken clouds',\n",
-       "   'icon': '04d'}],\n",
-       " 'base': 'stations',\n",
-       " 'main': {'temp': 41.81,\n",
-       "  'feels_like': 36.79,\n",
-       "  'temp_min': 38.41,\n",
-       "  'temp_max': 43.95,\n",
-       "  'pressure': 1013,\n",
-       "  'humidity': 45},\n",
-       " 'visibility': 10000,\n",
-       " 'wind': {'speed': 8.01, 'deg': 307, 'gust': 21.99},\n",
-       " 'clouds': {'all': 75},\n",
-       " 'dt': 1639316161,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
-       "  'country': 'US',\n",
-       "  'sunrise': 1639310669,\n",
-       "  'sunset': 1639343514},\n",
-       " 'timezone': -18000,\n",
-       " 'id': 4930956,\n",
-       " 'name': 'Boston',\n",
-       " 'cod': 200}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Get the text of the 'Get' request.\n",
-    "city_weather.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1dbf1cb7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Beginning Data Retrieval     \n",
-      "-----------------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create an empty list to hold the weather data.\n",
-    "city_data = []\n",
-    "# Print the beginning of the logging.\n",
-    "print(\"Beginning Data Retrieval     \")\n",
-    "print(\"-----------------------------\")\n",
-    "\n",
-    "# Create counters.\n",
-    "record_count = 1\n",
-    "set_count = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "f125e528",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "City not found. Skipping...\n",
-      "-----------------------------\n",
-      "Data Retrieval Complete      \n",
-      "-----------------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Run an API request for each of the cities.\n",
-    "try:\n",
-    "        # Parse the JSON and retrieve data.\n",
-    "        city_weather = requests.get(city_url).json()\n",
-    "        # Parse out the needed data.\n",
-    "        city_lat = city_weather[\"coord\"][\"lat\"]\n",
-    "        city_lng = city_weather[\"coord\"][\"lon\"]\n",
-    "        city_max_temp = city_weather[\"main\"][\"temp_max\"]\n",
-    "        city_humidity = city_weather[\"main\"][\"humidity\"]\n",
-    "        city_clouds = city_weather[\"clouds\"][\"all\"]\n",
-    "        city_wind = city_weather[\"wind\"][\"speed\"]\n",
-    "        city_country = city_weather[\"sys\"][\"country\"]\n",
-    "        # Convert the date to ISO standard.\n",
-    "        city_date = datetime.utcfromtimestamp(city_weather[\"dt\"]).strftime('%Y-%m-%d %H:%M:%S')\n",
-    "        # Append the city information into city_data list.\n",
-    "        city_data.append({\"City\": city.title(),\n",
-    "                          \"Lat\": city_lat,\n",
-    "                          \"Lng\": city_lng,\n",
-    "                          \"Max Temp\": city_max_temp,\n",
-    "                          \"Humidity\": city_humidity,\n",
-    "                          \"Cloudiness\": city_clouds,\n",
-    "                          \"Wind Speed\": city_wind,\n",
-    "                          \"Country\": city_country,\n",
-    "                          \"Date\": city_date})\n",
-    "except:\n",
-    "        print(\"City not found. Skipping...\")\n",
-    "        pass\n",
-    "\n",
-    "# Indicate that Data Loading is complete.\n",
-    "print(\"-----------------------------\")\n",
-    "print(\"Data Retrieval Complete      \")\n",
-    "print(\"-----------------------------\")"
+    "# starting url\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d67af6df",
+   "id": "f78bb584",
    "metadata": {},
    "outputs": [],
    "source": []
