--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "170a2a8a",
+   "id": "6670c58b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "f0d72583",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<zip at 0x2258739b908>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a set of random latitude and longitude combinations\n",
+    "lats = np.random.uniform(low=-90.000, high=90.000, size=1500)\n",
+    "lngs = np.random.uniform(low=-180.000, high=180.000, size=1500)\n",
+    "lat_lngs = zip(lats, lngs)\n",
+    "lat_lngs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1301b092",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add the latitudes and longitudes to a list\n",
+    "coordinates = list(lat_lngs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2597d536",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from citipy import citipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "10b777c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "593"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a list for holding the cities.\n",
+    "cities = []\n",
+    "\n",
+    "# Identify the nearest city for each latitude and longitude combination.\n",
+    "for coordinate in coordinates:\n",
+    "    city = citipy.nearest_city(coordinate[0], coordinate[1]).city_name\n",
+    "\n",
+    "    # If the city is unique, then we will add it to the cities list.\n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
+    "        \n",
+    "# Print the city count to confirm sufficient count.\n",
+    "len(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f78bb584",
+   "id": "ec2cfef7",
    "metadata": {},
    "outputs": [],
    "source": []
