--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7908349c",
+   "id": "7d4e3966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8764f38a",
+   "id": "bdbb0cbc",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4e96123b",
+   "id": "2d7bb7b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "47d657b1",
+   "id": "badc9683",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "89c56327",
+   "id": "a0e5ef5f",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "00c96a69",
+   "id": "d4fbb2bf",
    "metadata": {},
    "outputs": [
     {
@@ -854,8 +854,246 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "56b81810",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "543"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(city_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9533472c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Vila Do Maio</td>\n",
+       "      <td>15.1333</td>\n",
+       "      <td>-23.2167</td>\n",
+       "      <td>79.59</td>\n",
+       "      <td>70</td>\n",
+       "      <td>49</td>\n",
+       "      <td>10.96</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>2021-12-12 14:11:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sao Filipe</td>\n",
+       "      <td>14.8961</td>\n",
+       "      <td>-24.4956</td>\n",
+       "      <td>76.21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9.69</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>2021-12-12 14:11:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tobol</td>\n",
+       "      <td>52.6844</td>\n",
+       "      <td>62.5794</td>\n",
+       "      <td>6.24</td>\n",
+       "      <td>92</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>KZ</td>\n",
+       "      <td>2021-12-12 14:11:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cape Town</td>\n",
+       "      <td>-33.9258</td>\n",
+       "      <td>18.4232</td>\n",
+       "      <td>77.09</td>\n",
+       "      <td>50</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>2021-12-12 14:11:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mount Isa</td>\n",
+       "      <td>-20.7333</td>\n",
+       "      <td>139.5000</td>\n",
+       "      <td>82.17</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>2021-12-12 14:11:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>538</th>\n",
+       "      <td>Madimba</td>\n",
+       "      <td>-10.4000</td>\n",
+       "      <td>40.3333</td>\n",
+       "      <td>82.62</td>\n",
+       "      <td>69</td>\n",
+       "      <td>100</td>\n",
+       "      <td>8.77</td>\n",
+       "      <td>TZ</td>\n",
+       "      <td>2021-12-12 14:14:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>Nanakuli</td>\n",
+       "      <td>21.3906</td>\n",
+       "      <td>-158.1547</td>\n",
+       "      <td>73.35</td>\n",
+       "      <td>83</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2021-12-12 14:14:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>Herat</td>\n",
+       "      <td>34.5000</td>\n",
+       "      <td>62.0000</td>\n",
+       "      <td>44.80</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.01</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>2021-12-12 14:14:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541</th>\n",
+       "      <td>Tabou</td>\n",
+       "      <td>4.4230</td>\n",
+       "      <td>-7.3528</td>\n",
+       "      <td>84.67</td>\n",
+       "      <td>68</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7.34</td>\n",
+       "      <td>CI</td>\n",
+       "      <td>2021-12-12 14:14:01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>Petrov Val</td>\n",
+       "      <td>50.1434</td>\n",
+       "      <td>45.2096</td>\n",
+       "      <td>20.64</td>\n",
+       "      <td>84</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8.95</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>2021-12-12 14:09:36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>543 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0    Vila Do Maio  15.1333  -23.2167     79.59        70          49   \n",
+       "1      Sao Filipe  14.8961  -24.4956     76.21        68          16   \n",
+       "2           Tobol  52.6844   62.5794      6.24        92          13   \n",
+       "3       Cape Town -33.9258   18.4232     77.09        50         100   \n",
+       "4       Mount Isa -20.7333  139.5000     82.17        15           0   \n",
+       "..            ...      ...       ...       ...       ...         ...   \n",
+       "538       Madimba -10.4000   40.3333     82.62        69         100   \n",
+       "539      Nanakuli  21.3906 -158.1547     73.35        83          40   \n",
+       "540         Herat  34.5000   62.0000     44.80        47           0   \n",
+       "541         Tabou   4.4230   -7.3528     84.67        68          23   \n",
+       "542    Petrov Val  50.1434   45.2096     20.64        84           7   \n",
+       "\n",
+       "     Wind Speed Country                 Date  \n",
+       "0         10.96      CV  2021-12-12 14:11:35  \n",
+       "1          9.69      CV  2021-12-12 14:11:35  \n",
+       "2          5.99      KZ  2021-12-12 14:11:36  \n",
+       "3          1.99      ZA  2021-12-12 14:11:36  \n",
+       "4          8.05      AU  2021-12-12 14:11:36  \n",
+       "..          ...     ...                  ...  \n",
+       "538        8.77      TZ  2021-12-12 14:14:00  \n",
+       "539        0.00      US  2021-12-12 14:14:01  \n",
+       "540       15.01      AF  2021-12-12 14:14:01  \n",
+       "541        7.34      CI  2021-12-12 14:14:01  \n",
+       "542        8.95      RU  2021-12-12 14:09:36  \n",
+       "\n",
+       "[543 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert the array of dictionaries to a pandas dataframe\n",
+    "city_data_df = pd.DataFrame(city_data)\n",
+    "city_data_df.head(543)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a2bf30b8",
+   "id": "3d2f73d3",
    "metadata": {},
    "outputs": [],
    "source": []
