--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7d4e3966",
+   "id": "9d601bef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bdbb0cbc",
+   "id": "e6b2d852",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2d7bb7b7",
+   "id": "ddf73736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "badc9683",
+   "id": "14558245",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a0e5ef5f",
+   "id": "c933ee2e",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d4fbb2bf",
+   "id": "b892bc57",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "56b81810",
+   "id": "d2877746",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9533472c",
+   "id": "095c2a78",
    "metadata": {},
    "outputs": [
     {
@@ -1092,8 +1092,264 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "cb68556c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reorder columns\n",
+    "new_column_order = ['City', 'Country', 'Date', 'Lat', 'Lng', 'Max Temp', 'Humidity', 'Cloudiness', 'Wind Speed']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4f571e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Vila Do Maio</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>2021-12-12 14:11:35</td>\n",
+       "      <td>15.1333</td>\n",
+       "      <td>-23.2167</td>\n",
+       "      <td>79.59</td>\n",
+       "      <td>70</td>\n",
+       "      <td>49</td>\n",
+       "      <td>10.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sao Filipe</td>\n",
+       "      <td>CV</td>\n",
+       "      <td>2021-12-12 14:11:35</td>\n",
+       "      <td>14.8961</td>\n",
+       "      <td>-24.4956</td>\n",
+       "      <td>76.21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tobol</td>\n",
+       "      <td>KZ</td>\n",
+       "      <td>2021-12-12 14:11:36</td>\n",
+       "      <td>52.6844</td>\n",
+       "      <td>62.5794</td>\n",
+       "      <td>6.24</td>\n",
+       "      <td>92</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cape Town</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>2021-12-12 14:11:36</td>\n",
+       "      <td>-33.9258</td>\n",
+       "      <td>18.4232</td>\n",
+       "      <td>77.09</td>\n",
+       "      <td>50</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mount Isa</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>2021-12-12 14:11:36</td>\n",
+       "      <td>-20.7333</td>\n",
+       "      <td>139.5000</td>\n",
+       "      <td>82.17</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>538</th>\n",
+       "      <td>Madimba</td>\n",
+       "      <td>TZ</td>\n",
+       "      <td>2021-12-12 14:14:00</td>\n",
+       "      <td>-10.4000</td>\n",
+       "      <td>40.3333</td>\n",
+       "      <td>82.62</td>\n",
+       "      <td>69</td>\n",
+       "      <td>100</td>\n",
+       "      <td>8.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>539</th>\n",
+       "      <td>Nanakuli</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2021-12-12 14:14:01</td>\n",
+       "      <td>21.3906</td>\n",
+       "      <td>-158.1547</td>\n",
+       "      <td>73.35</td>\n",
+       "      <td>83</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>540</th>\n",
+       "      <td>Herat</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>2021-12-12 14:14:01</td>\n",
+       "      <td>34.5000</td>\n",
+       "      <td>62.0000</td>\n",
+       "      <td>44.80</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541</th>\n",
+       "      <td>Tabou</td>\n",
+       "      <td>CI</td>\n",
+       "      <td>2021-12-12 14:14:01</td>\n",
+       "      <td>4.4230</td>\n",
+       "      <td>-7.3528</td>\n",
+       "      <td>84.67</td>\n",
+       "      <td>68</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>Petrov Val</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>2021-12-12 14:09:36</td>\n",
+       "      <td>50.1434</td>\n",
+       "      <td>45.2096</td>\n",
+       "      <td>20.64</td>\n",
+       "      <td>84</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8.95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>543 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             City Country                 Date      Lat       Lng  Max Temp  \\\n",
+       "0    Vila Do Maio      CV  2021-12-12 14:11:35  15.1333  -23.2167     79.59   \n",
+       "1      Sao Filipe      CV  2021-12-12 14:11:35  14.8961  -24.4956     76.21   \n",
+       "2           Tobol      KZ  2021-12-12 14:11:36  52.6844   62.5794      6.24   \n",
+       "3       Cape Town      ZA  2021-12-12 14:11:36 -33.9258   18.4232     77.09   \n",
+       "4       Mount Isa      AU  2021-12-12 14:11:36 -20.7333  139.5000     82.17   \n",
+       "..            ...     ...                  ...      ...       ...       ...   \n",
+       "538       Madimba      TZ  2021-12-12 14:14:00 -10.4000   40.3333     82.62   \n",
+       "539      Nanakuli      US  2021-12-12 14:14:01  21.3906 -158.1547     73.35   \n",
+       "540         Herat      AF  2021-12-12 14:14:01  34.5000   62.0000     44.80   \n",
+       "541         Tabou      CI  2021-12-12 14:14:01   4.4230   -7.3528     84.67   \n",
+       "542    Petrov Val      RU  2021-12-12 14:09:36  50.1434   45.2096     20.64   \n",
+       "\n",
+       "     Humidity  Cloudiness  Wind Speed  \n",
+       "0          70          49       10.96  \n",
+       "1          68          16        9.69  \n",
+       "2          92          13        5.99  \n",
+       "3          50         100        1.99  \n",
+       "4          15           0        8.05  \n",
+       "..        ...         ...         ...  \n",
+       "538        69         100        8.77  \n",
+       "539        83          40        0.00  \n",
+       "540        47           0       15.01  \n",
+       "541        68          23        7.34  \n",
+       "542        84           7        8.95  \n",
+       "\n",
+       "[543 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city_data_df = city_data_df[new_column_order]\n",
+    "city_data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "647001ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'weather_data/cities.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25372/2465850316.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0moutput_data_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'weather_data/cities.csv'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#export the city_data into a csv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mcity_data_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput_data_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex_label\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'City_ID'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal, errors, storage_options)\u001b[0m\n\u001b[0;32m   3480\u001b[0m             \u001b[0mdoublequote\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdoublequote\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3481\u001b[0m             \u001b[0mescapechar\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mescapechar\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3482\u001b[1;33m             \u001b[0mstorage_options\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3483\u001b[0m         )\n\u001b[0;32m   3484\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\pandas\\io\\formats\\format.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, encoding, sep, columns, index_label, mode, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, errors, storage_options)\u001b[0m\n\u001b[0;32m   1103\u001b[0m             \u001b[0mformatter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfmt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1104\u001b[0m         )\n\u001b[1;32m-> 1105\u001b[1;33m         \u001b[0mcsv_formatter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1106\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1107\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcreated_buffer\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    241\u001b[0m             \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    242\u001b[0m             \u001b[0mcompression\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompression\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 243\u001b[1;33m             \u001b[0mstorage_options\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    244\u001b[0m         ) as handles:\n\u001b[0;32m    245\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    705\u001b[0m                 \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencoding\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    706\u001b[0m                 \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 707\u001b[1;33m                 \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    708\u001b[0m             )\n\u001b[0;32m    709\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'weather_data/cities.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "# create the output (csv)\n",
+    "output_data_file = 'weather_data/cities.csv'\n",
+    "#export the city_data into a csv\n",
+    "city_data_df.to_csv(output_data_file, index_label='City_ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3d2f73d3",
+   "id": "19b57326",
    "metadata": {},
    "outputs": [],
    "source": []
